fix(web): tweak masonry config and image viewer interactions
- Read masonry batch sizes from nested config with warnings if missing
- Switch masonry page to raw layout and adjust styling and lazyload images
- Improve global scrollbars and image viewer dragging performance and behavior

--- a/source/css/common/basic.styl
+++ b/source/css/common/basic.styl
@@ -29,6 +29,7 @@ html, body
   font-weight $default-font-weight
   font-size $default-font-size
   line-height $default-line-height
+  scrollbar-gutter stable
 
   --navbar-height: $navbar-height
 
