--- a/source/css/layout/_partials/image-viewer.styl
+++ b/source/css/layout/_partials/image-viewer.styl
@@ -41,6 +41,7 @@
     max-width 100%
     max-height 100%
     opacity 0
+    will-change transform
     transition-t('opacity', '0', '0.25', 'ease')
 
   .image-viewer-prev,
